# care-review

./: README.md  SKILL.md  pyproject.toml
care/: __init__.py  base.py  care.py  cli.py
tests/: test_care.py
tests/fixtures/: message_sample.txt
